--- a/script.ipynb
+++ b/script.ipynb
@@ -10,7 +10,13 @@
     "import csv\n",
     "import re\n",
     "import pandas as pd\n",
+    "import openpyxl\n",
     "from openpyxl import load_workbook\n",
+    "from openpyxl.chart import (\n",
+    "    PieChart,\n",
+    "    Reference,\n",
+    "    Series,\n",
+    ")\n",
     "import numpy\n",
     "from datetime import datetime, timedelta"
    ]
@@ -485,6 +491,224 @@
     "df_my_mtgs.to_excel(writer, sheet_name = 'Meetings I Own', index=False)\n",
     "\n",
     "writer.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9b74515",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Open the Excel workbook\n",
+    "wb = openpyxl.load_workbook('cal_audit_tool.xlsx')\n",
+    "\n",
+    "# Iterate over the sheets in the workbook\n",
+    "for sheet in wb.worksheets:\n",
+    "    # Iterate over the cells in the \"recurrence\" column\n",
+    "    for row in sheet.iter_cols(min_col=7, max_col=7):\n",
+    "        for cell in row:\n",
+    "            # If the cell value contains a question mark, replace it with a comma\n",
+    "            if '?' in cell.value:\n",
+    "                cell.value = cell.value.replace('?', '-')\n",
+    "\n",
+    "# Save the workbook\n",
+    "wb.save('cal_audit_tool.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9230dbb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sort rows based on meeting cadence + add headers for each cadence\n",
+    "\n",
+    "# Open the Excel workbook\n",
+    "wb = openpyxl.load_workbook('cal_audit_tool.xlsx')\n",
+    "\n",
+    "times = []\n",
+    "\n",
+    "# Iterate over the sheets in the workbook\n",
+    "for sheet in wb.worksheets:\n",
+    "    # Create a list of rows to be sorted\n",
+    "    rows = list(sheet.iter_rows(min_row=2))\n",
+    "    \n",
+    "    # Define a custom key function for sorting the rows\n",
+    "    def sort_key(row):\n",
+    "        recurrence_cell = row[6]\n",
+    "        recurrence_value = recurrence_cell.value\n",
+    "        if recurrence_value.startswith(\"Every week\"):\n",
+    "            return 1\n",
+    "        elif recurrence_value.startswith(\"Every 2 weeks\"):\n",
+    "            return 2\n",
+    "        elif recurrence_value.startswith(\"Every 3 weeks\"):\n",
+    "            return 3\n",
+    "        elif recurrence_value.startswith(\"Every 4 weeks\"):\n",
+    "            return 4\n",
+    "        elif recurrence_value.startswith(\"Every month\"):\n",
+    "            return 5\n",
+    "        elif recurrence_value.startswith(\"Every 2 months\"):\n",
+    "            return 6\n",
+    "        elif recurrence_value.startswith(\"Every 3 months\"):\n",
+    "            return 7\n",
+    "        else:\n",
+    "            return 8\n",
+    "    \n",
+    "    # Sort the rows using the custom key function\n",
+    "    sorted_rows = sorted(rows, key=sort_key)\n",
+    "    \n",
+    "    # Clear the sheet\n",
+    "    sheet.delete_rows(2, sheet.max_row)\n",
+    "    \n",
+    "    # Create a list to store the rows to be written to the sheet\n",
+    "    sheet_rows = []\n",
+    "        \n",
+    "    # Write the sorted rows back to the sheet\n",
+    "    for row in sorted_rows:\n",
+    "        sheet.append(row)\n",
+    "\n",
+    "# Save the workbook\n",
+    "wb.save('cal_audit_tool.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5634c16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete recurring column\n",
+    "\n",
+    "# Open the Excel workbook\n",
+    "wb = openpyxl.load_workbook('cal_audit_tool.xlsx')\n",
+    "\n",
+    "for sheet in wb.worksheets:\n",
+    "    sheet.delete_cols(6)\n",
+    "\n",
+    "# Save the workbook\n",
+    "wb.save('cal_audit_tool.xlsx')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c3ef307",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Tried to make pie chart calculating time spent in weekly meetings compared to 40-hr work week, didn't work\n",
+    "\n",
+    "# # Open the Excel workbook\n",
+    "# wb = openpyxl.load_workbook('cal_audit_tool.xlsx')\n",
+    "# times=[]\n",
+    "# # Iterate over rows that contain weekly meetings\n",
+    "# for sheet in wb.worksheets:\n",
+    "    \n",
+    "\n",
+    "#         # Iterate over the rows in the sheet\n",
+    "#         for row in sheet.iter_rows():\n",
+    "#             # Access the cells in the row\n",
+    "#             title, category, organizer, response, attendees, recurring, recurrence, recurrence_end, time_min  = row\n",
+    "#             # Access the cell in the recurrence & \"Time (in minutes)\" column\n",
+    "#             recurrence = row[6]\n",
+    "#             time_min = row[8]\n",
+    "#                 # Check if the cell in the \"recurrence\" column starts with \"Every week\"\n",
+    "#             if recurrence.value.startswith(\"Every week\"):\n",
+    "#                 # Try to convert the cell value to a float\n",
+    "# #                 try:\n",
+    "#                 value = int(time_min.value)\n",
+    "# #                 except ValueError:\n",
+    "# #                     # If the conversion fails, skip this row\n",
+    "# #                     continue\n",
+    "#                 # If the conversion succeeds, append the value to the list\n",
+    "#                 times.append(int(value))\n",
+    "                \n",
+    "# # Calculate the total number of minutes spent in weekly meetings\n",
+    "# total_minutes = sum(times)\n",
+    "\n",
+    "# # Convert the total number of minutes to hours\n",
+    "# total_hours = total_minutes / 60\n",
+    "\n",
+    "# # Calculate the percentage of hours spent in weekly meetings\n",
+    "# percentage = total_hours / 40 * 100\n",
+    "# percentage_int = int(percentage)\n",
+    "\n",
+    "# # Create a new sheet\n",
+    "# sheet = wb.create_sheet(\"Time spent in weekly meetings\")\n",
+    "\n",
+    "# # labels = ('Weekly Meetings', 'Remaining Time')\n",
+    "# sizes = (percentage_int, 100-percentage_int)\n",
+    "# # Add the pie chart to the sheet\n",
+    "# chart = PieChart()\n",
+    "# chart.title = \"Time spent in weekly meetings\"\n",
+    "# chart.add_data(sizes)\n",
+    "# chart.set_categories(labels)\n",
+    "# sheet.add_chart(chart, \"A1\")\n",
+    "\n",
+    "# # Save the workbook\n",
+    "# wb.save(\"cal_audit_tool.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc8c327f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tried to add title headers to each category of meeting cadence, didn't work\n",
+    "\n",
+    "# # Open the Excel workbook\n",
+    "# wb = openpyxl.load_workbook('cal_audit_tool.xlsx')\n",
+    "\n",
+    "# # Keep track of the current category\n",
+    "# current_category = 0\n",
+    "\n",
+    "# # Iterate over the sorted rows\n",
+    "# for row in sorted_rows:\n",
+    "#     recurrence_cell = row[6]\n",
+    "#     recurrence_value = recurrence_cell.value\n",
+    "#     if recurrence_value.startswith(\"Every week\"):\n",
+    "#         category = 1\n",
+    "#     elif recurrence_value.startswith(\"Every 2 weeks\"):\n",
+    "#         category = 2\n",
+    "#     elif recurrence_value.startswith(\"Every 3 weeks\"):\n",
+    "#         category = 3\n",
+    "#     elif recurrence_value.startswith(\"Every 4 weeks\"):\n",
+    "#         category = 4\n",
+    "#     elif recurrence_value.startswith(\"Every month\"):\n",
+    "#         category = 5\n",
+    "#     elif recurrence_value.startswith(\"Every 2 months\"):\n",
+    "#         category = 6\n",
+    "#     elif recurrence_value.startswith(\"Every 3 months\"):\n",
+    "#         category = 7\n",
+    "#     else:\n",
+    "#         category = 8\n",
+    "#     if category != current_category:\n",
+    "#         current_category = category\n",
+    "#     if category == 1:\n",
+    "#         sheet.append([\"Weekly Meetings\"])\n",
+    "#     elif category == 2:\n",
+    "#         sheet.append([\"Bi-Weekly Meetings\"])\n",
+    "#     elif category == 3:\n",
+    "#         sheet.append([\"Tri-Weekly Meetings\"])\n",
+    "#     elif category == 4:\n",
+    "#         sheet.append([\"Every 4 Weeks Meetings\"])\n",
+    "#     elif category == 5:\n",
+    "#         sheet.append([\"Monthly Meetings\"])\n",
+    "#     elif category == 6:\n",
+    "#         sheet.append([\"Bi-Monthly Meetings\"])\n",
+    "#     elif category == 7:\n",
+    "#         sheet.append([\"Quarterly Meetings\"])\n",
+    "#     else:\n",
+    "#         sheet.append([\"All Other Cadences\"])\n",
+    "# sheet.append(row)\n",
+    "    \n",
+    "# # Save the workbook\n",
+    "# wb.save('cal_audit_tool.xlsx')"
    ]
   }
  ],
