--- a/new_flask.ipynb
+++ b/new_flask.ipynb
@@ -3,43 +3,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08658167",
+   "id": "2b6cb764",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * Serving Flask app \"__main__\" (lazy loading)\n",
-      " * Environment: production\n",
-      "   WARNING: This is a development server. Do not use it in a production deployment.\n",
-      "   Use a production WSGI server instead.\n",
-      " * Debug mode: off\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [31/Dec/2022 00:20:17] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [31/Dec/2022 00:20:23] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Must \"save as\" export csv as test.csv saved as MS-CSV file type prior to running\n",
+    "\n",
     "import csv\n",
     "import re\n",
     "import pandas as pd\n",
+    "import pytz\n",
     "import openpyxl\n",
+    "from dateutil import parser\n",
     "from openpyxl import load_workbook\n",
-    "from openpyxl.chart import (\n",
-    "    PieChart,\n",
-    "    Reference,\n",
-    "    Series,\n",
-    ")\n",
-    "import numpy\n",
     "from datetime import datetime, timedelta\n",
+    "import numpy\n",
+    "# from datetime import datetime, timedelta\n",
     "from flask import Flask, request, render_template\n",
     "\n",
     "app = Flask(__name__)\n",
@@ -48,7 +27,7 @@
     "def home():\n",
     "    if request.method == 'POST':\n",
     "        # Open the CSV file in read mode\n",
-    "        with open('test2.csv', 'r') as csv_file:\n",
+    "        with open('test.csv', 'r') as csv_file:\n",
     "            # Create a csv.reader object\n",
     "            reader = csv.reader(csv_file)\n",
     "            # Read the contents of the file\n",
@@ -203,7 +182,7 @@
     "\n",
     "        # Get the headers from the contents\n",
     "        headers = contents[0]\n",
-    "\n",
+    "        from datetime import datetime\n",
     "        # Create a new list to store the modified rows\n",
     "        modified_rows = []\n",
     "\n",
@@ -235,7 +214,7 @@
     "            reader = csv.reader(csv_file)\n",
     "            # Read the contents of the file\n",
     "            contents = list(reader)\n",
-    "\n",
+    "                \n",
     "        # Get the headers from the contents\n",
     "        headers = contents[0]\n",
     "\n",
@@ -286,9 +265,12 @@
     "\n",
     "        # Get the headers from the contents\n",
     "        headers = contents[0]    \n",
-    "\n",
+    "        # Add the new header to the list of headers\n",
+    "        headers.append(\"Meeting expires within 30 days\")\n",
     "        # Create a list to store the modified rows\n",
     "        modified_rows = []\n",
+    "        pacific = pytz.timezone('US/Pacific')\n",
+    "        now = datetime.now(pacific)\n",
     "\n",
     "        # Iterate over the rows in the contents\n",
     "        for row in contents:\n",
@@ -296,6 +278,25 @@
     "            if row[0] == \"title\":\n",
     "                # Skip this row and move on to the next one\n",
     "                continue\n",
+    "\n",
+    "            # Parse the \"recurrence end\" date and time string\n",
+    "            recurrence_end = datetime.strptime(row[9], '%Y-%m-%dT%H:%M:%S%z')\n",
+    "#             recurrence_end = recurrence_end.astimezone(pytz.pacific).replace(tzinfo=None)\n",
+    "            # Check if the \"recurrence end\" date is within 30 days of the current date\n",
+    "            if recurrence_end > now and recurrence_end < now + timedelta(days=30):\n",
+    "                # Set the value of the new column to \"yes\"\n",
+    "                row.append(\"yes\")\n",
+    "            else:\n",
+    "                # Set the value of the new column to \"no\"\n",
+    "                row.append(\"no\")\n",
+    "\n",
+    "                # Iterate over the rows in the contents\n",
+    "        for row in contents:\n",
+    "                    # Check if the current row is the header row\n",
+    "            if row[0] == \"title\":\n",
+    "                        # Skip this row and move on to the next one\n",
+    "                continue\n",
+    "            \n",
     "            # Parse the \"recurrence end\" date and time string\n",
     "            recurrence_end = datetime.strptime(row[9], '%Y-%m-%dT%H:%M:%S%z')\n",
     "            # Convert the \"recurrence end\" date and time to the \"full date/time pattern (short time)\" format\n",
@@ -330,10 +331,6 @@
     "\n",
     "        # Create a list to store the rows that need to be moved to the new file\n",
     "        headers = contents[0]\n",
-    "\n",
-    "        # Drop the \"start\" and \"end\" columns from the headers\n",
-    "        # headers.pop(2)\n",
-    "        # headers.pop(2)\n",
     "\n",
     "        # Create a new list to store the modified rows\n",
     "        modified_rows = []\n",
@@ -435,12 +432,17 @@
     "            # Iterate over the cells in the \"recurrence\" column\n",
     "            for row in sheet.iter_cols(min_col=7, max_col=7):\n",
     "                for cell in row:\n",
-    "                    # If the cell value contains a question mark, replace it with a comma\n",
+    "                    # If the cell value contains a question mark, replace it with a -\n",
     "                    if '?' in cell.value:\n",
     "                        cell.value = cell.value.replace('?', '-')\n",
     "\n",
     "        # Save the workbook\n",
     "        wb.save('cal_audit_tool.xlsx')\n",
+    "        \n",
+    "        # Try to make new sheet w/ meetings about to end\n",
+    "        # Open the workbook\n",
+    "        wb = openpyxl.load_workbook('cal_audit_tool.xlsx')\n",
+    "\n",
     "        \n",
     "                # Sort rows based on meeting cadence + add headers for each cadence\n",
     "\n",
@@ -501,6 +503,9 @@
     "\n",
     "        # Save the workbook\n",
     "        wb.save('cal_audit_tool.xlsx')\n",
+    "        \n",
+    "        \n",
+    "        # ------------------------------------------------------------------------------------------\n",
     "\n",
     "\n",
     "        return 'Success'\n",
@@ -513,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f51db676",
+   "id": "bc513cc6",
    "metadata": {},
    "outputs": [],
    "source": []
