--- a/new_flask.ipynb
+++ b/new_flask.ipynb
@@ -26,8 +26,11 @@
     "@app.route('/', methods=['GET', 'POST'])\n",
     "def home():\n",
     "    if request.method == 'POST':\n",
+    "        # Get file from post request\n",
+    "        file = request.files['file']\n",
+    "        file.save('export_audit.csv')\n",
     "        # Open the CSV file in read mode\n",
-    "        with open('test.csv', 'r') as csv_file:\n",
+    "        with open('export_audit.csv', 'r') as csv_file:\n",
     "            # Create a csv.reader object\n",
     "            reader = csv.reader(csv_file)\n",
     "            # Read the contents of the file\n",
@@ -37,7 +40,7 @@
     "        csv_file.close()\n",
     "\n",
     "        # Open the CSV file in write mode\n",
-    "        with open('output.csv', 'w', newline='') as csv_file:\n",
+    "        with open('export_audit.csv', 'w') as csv_file:\n",
     "            # Create a csv.writer object\n",
     "            writer = csv.writer(csv_file)\n",
     "            # Write the new headers to the file\n",
@@ -67,7 +70,7 @@
     "            contents[i] = row[0].split(',')\n",
     "\n",
     "\n",
-    "        with open('output.csv', 'w', newline='') as csv_file:\n",
+    "        with open('export_audit.csv', 'w', newline='') as csv_file:\n",
     "            # Create a csv.writer object\n",
     "            writer = csv.writer(csv_file)\n",
     "\n",
@@ -78,7 +81,7 @@
     "        csv_file.close()\n",
     "        \n",
     "                # Open the CSV file in read mode\n",
-    "        with open('output.csv', 'r') as csv_file:\n",
+    "        with open('export_audit.csv', 'r') as csv_file:\n",
     "            # Create a csv.reader object\n",
     "            reader = csv.reader(csv_file)\n",
     "            # Read the contents of the file\n",
@@ -93,7 +96,7 @@
     "            contents[i] = [x.strip('\"') for x in row]\n",
     "\n",
     "        # Open the CSV file in write mode\n",
-    "        with open('output.csv', 'w', newline='') as csv_file:\n",
+    "        with open('export_audit.csv', 'w', newline='') as csv_file:\n",
     "            # Create a csv.writer object\n",
     "            writer = csv.writer(csv_file)\n",
     "            # Write the modified contents of the file to the file\n",
@@ -103,7 +106,7 @@
     "        csv_file.close()\n",
     "\n",
     "        # Open the input CSV file in read mode\n",
-    "        with open('output.csv', 'r') as csv_file:\n",
+    "        with open('export_audit.csv', 'r') as csv_file:\n",
     "            # Create a csv.reader object\n",
     "            reader = csv.reader(csv_file)\n",
     "            # Read the contents of the file\n",
@@ -116,7 +119,8 @@
     "        csv_file.close()\n",
     "\n",
     "        # grab all rows without yes or no in recurring column, have any letter in attendees column, or doesnt start with 2 in recurrence end column\n",
-    "        contents2 = [row for row in contents if (row[7] not in ['yes', 'no'] or any(c.isalpha() for c in row[6])) or not row[9].startswith(\"2\")]\n",
+    "        contents2 = [row for row in contents if (isinstance(row[7], str) and row[7] not in ['yes', 'no']) or (isinstance(row[6], str) and any(c.isalpha() for c in row[6])) or (isinstance(row[9], str) and not row[9].startswith(\"2\"))]\n",
+    "\n",
     "\n",
     "        # Open the output CSV file in write mode\n",
     "        with open('corrupt_data.csv', 'w', newline='') as csv_file:\n",
