--- a/new_flask.ipynb
+++ b/new_flask.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Must \"save as\" export csv as test.csv saved as MS-CSV file type prior to running\n",
+    "# Must \"save as\" export csv as MS-CSV file type prior to running\n",
     "\n",
     "import csv\n",
     "import re\n",
